# rust-rest-api

./: Cargo.toml  docker-compose.yaml
src/: items.rs  main.rs
src/config/: database.rs  mongo.rs
src/items/: entities.rs  handlers.rs  models.rs  repositories.rs  usecases.rs
