[package]
name = "rust-rest-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
axum-macros = "0.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"]}
tokio = { version = "1.0", features = ["full"]}
mongodb = "3.1"
bson = "2.6"
tracing-subscriber = "0.3"
tracing = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["full"] }
http = "1.1"
async-trait = "0.1"